@@ -1,3 +1,5 @@
+  * chpst.c: new option -/ chroot.
+
 runit 1.0.2
 Mon, 29 Mar 2004 17:52:50 +0000
   * man/svlogd.8: timestamps are not considered when matching patterns (thx
